--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <script>
   const phones = [
     { name: "Spinache Mobile 3", image: "img/Titelloses 215_20250224211030.jpeg", page: "spinachemobile3.html" },
-    { name: "Spinache Mobile 2 Ultra", image: "img/Titelloses 167_20250204210436.png", page: "spinachemobile2ultra.html" },
+    { name: "Spinache Mobile 2 Ultra", image: "img/Titelloses 167_20250204210436.jpeg", page: "spinachemobile2ultra.html" },
   ];
 
   function toggleMenu() {
