--- a/participate.html
+++ b/participate.html
@@ -97,6 +97,7 @@
     <li>Features:</li>
     <li>Color variants</li>
     <li>Geekbench, (Antutu) and Forgepoints</li>
+    <li>Prices for each storage variant/color variant etc.</li>
     <li>A picture where the phone is centered, front and backside:</li>
   </ul>
   
