--- a/spinachemobile3.html
+++ b/spinachemobile3.html
@@ -237,6 +237,13 @@ color: grey;
 <li>Multi-Core: 8219</li>
 </ul>
 <li>ForgePoints: 205</li>
+<li>Prices:</li>
+ <ul>
+  <li>256GB: 799€</li>
+  <li>512GB: 839€</li>
+  <li>1TB: 909€</li>
+  <li>2TB: 979€</li>
+ </ul>
 </ul>
 
 </div>
