--- a/spinachemobile3.html
+++ b/spinachemobile3.html
@@ -225,7 +225,7 @@ color: grey;
 </ul>
 <li>Software:</li>
 <ul>
-<li>Name</li>
+<li>VegetableOS 3</li>
 <li>Software updates: 7 years</li>
 <li>Security updates: 8 years</li>
 </ul>
