--- a/participate.html
+++ b/participate.html
@@ -84,6 +84,7 @@
   
   <ul>
     <li>Device Name:</li>
+    <li>Announcment and release date:</li>
     <li>Display Specs:</li>
     <li>Processor and RAM:</li>
     <li>Camera System:</li>
@@ -98,7 +99,7 @@
     <li>Color variants</li>
     <li>Geekbench, (Antutu) and Forgepoints</li>
     <li>Prices for each storage variant/color variant etc.</li>
-    <li>A picture where the phone is centered, front and backside:</li>
+    <li>A picture where the phone is centered, front and backside, jpg or jpeg file:</li>
   </ul>
   
   <p>Send the formular after filling it out. Please inform yourself about each topic. Check GSMarena for inspiration.</p>
@@ -107,7 +108,7 @@
   <h1>What do I NOT do?</h1>
   </div>
     
-  <p>Don't submit unrealistic specs. Do research. Answer questions if there are any. Don't spam submits. 3 submits a day is okay. Anything above will be ignored. Accept criticism and suggestions. Not following these rules will erase your phones out of the project.</p>
+  <p>Don't submit unrealistic specs. Do research. Answer questions if there are any. Don't spam submits. 2 submits a day is okay. Anything above will be ignored. Accept criticism and suggestions. Not following these rules will erase your phones out of the project.</p>
 
   </div>
   
