--- a/template.html
+++ b/template.html
@@ -231,6 +231,7 @@ color: grey;
 </ul>
 <li>Features: Under-display Fingerprint</li>
 <li>Colors: Grip-Grey, Wooden-White</li>
+ <li>Body: Eco-leather, 206g, 7.9mm</li>
 <li>Geekbench Single-Core:</li>
 <ul>
 <li>Single-Core: 2839</li>
