--- a/spinachemobile2ultra.html
+++ b/spinachemobile2ultra.html
@@ -231,6 +231,7 @@ color: grey;
 </ul>
 <li>Features: Face ID, Under-display Fingerprint</li>
 <li>Colors: Leather-Grey</li>
+ <li>Body: Leather, with aluminum frame, 224,8.6mm</li>
 <li>Geekbench Single-Core:</li>
 <ul>
 <li>Single-Core: 2709</li>
