--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
   const phones = [
     { name: "Spinache Mobile 3", image: "img/Titelloses 215_20250224211030.jpeg", page: "spinachemobile3.html" },
     { name: "Spinache Mobile 2 Ultra", image: "img/Titelloses 167_20250204210436.jpeg", page: "spinachemobile2ultra.html" },
-    { name: "Phoyo Trowophone Q1", imgae: "img/Untitled4_20250310193534.jpeg", page: "phoyotrowophoneq1.html" },
+    { name: "Phoyo Trowophone Q1", image: "img/Untitled4_20250310193534.jpeg", page: "phoyotrowophoneq1.html" },
   ];
 
   function toggleMenu() {
