--- a/phoyotrowophoneq1.html
+++ b/phoyotrowophoneq1.html
@@ -207,7 +207,7 @@ color: grey;
 </ul>
 <li>Chipset: Phoyo Trowochip AI</li>
 <li>RAM: 12 GB</li>
-<li>Storage: 256GB/512GB/1TB/2TB</li>
+<li>Storage: 128GB/256GB</li>
 <li>Battery:</li>
 <ul>
 <li>mAh: 4600</li>
