--- a/participate.html
+++ b/participate.html
@@ -83,23 +83,36 @@
   <p>You'll firstly have to add @spinoevrex on discord (Note: This is temporary). Then you'll have to fill out following formular:</p>
   
   <ul>
-    <li>Device Name:</li>
-    <li>Announcment and release date:</li>
-    <li>Display Specs:</li>
-    <li>Processor and RAM:</li>
-    <li>Camera System:</li>
-    <li>Battery and charging:</li>
-    <li>Speakers and Audio</li>
-    <li>IP Rating:</li>
-    <li>SIM and Connectivity:</li>
-    <li>Building materials, weight and thickness:</li>
-    <li>Storage and SD Card slots:</li>
-    <li>Software and software support:</li>
-    <li>Features:</li>
-    <li>Color variants</li>
-    <li>Geekbench, (Antutu) and Forgepoints</li>
-    <li>Prices for each storage variant/color variant etc.</li>
-    <li>A picture where the phone is centered, front and backside, jpg or jpeg file:</li>
+    <li>Announcment date</li>
+    <li>Release date</li>
+    <li>Connectivity (2G/3G/4G/5G/etc.)</li>
+    <li>Screen type</li>
+    <li>Screen size (inches)</li>
+    <li>Resolution</li>
+    <li>Refresh rate (hz)</li>
+    <li>Peak brightness (nits)</li>
+    <li>Secondary screen? Specs?</li>
+    <li>Main/Wide camera specs (megapixels, aperture, sensor size, base magnification (milimeters), PDAF?, OIS?)</li>
+    <li>Ultrawide camera? Camera specs? (megapixels, aperture, sensor size, base magnification (milimeters), PDAF?, OIS?)</li>
+    <li>Telephoto/Periscope telephoto camera? Camera specs? (megapixels, aperture, sensor size, base magnification (milimeters), optical zoom, digital zoom, PDAF?, OIS?)</li>
+    <li>Features? (Sensors, Flashlights, etc.)</li>
+    <li>Video recording? (8k/4320p, 4k/2160p, 1440p, 1080p, 720p, etc., 24fps, 25, 30, 60, 120, 240, etc., gyroEIS?)</li>
+    <li>Selfie camera specs (megapixels, aperture, sensor size, base magnification (milimeters), PDAF?, OIS?)</li>
+    <li>Selfie camera video recording specs? gyro-EIS?</li>
+    <li>Chipset</li>
+    <li>RAM amount</li>
+    <li>Storage options</li>
+    <li>Battery (mAh, charging, wireless charging? reverse wireless charging?</li>
+    <li>Sound (Loudspeaker? Stereo/Mono? Headphone Jack?)</li>
+    <li>Software (Android? Custom OS? Name? Generation? Software support? Security support?</li>
+    <li>Other features? (Under display fingerprint/optical fingerprint/Face ID/Iris scanner/etc.?)</li>
+    <li>Color and material variants of the device?</li>
+    <li>Body (Materials (example: leather backside, plastic frame), weight (grams), thickness (milimeters))</li>
+    <li>Geekbench Single- and Multi-Core score?</li>
+    <li>Antutu-Score? Which antutu version? (v8/v10 is the latest)</li>
+    <li>Amount of ForgePoints</li>
+    <li>Prices for each storage, color or material variant</li>
+    <li>A picture of the device where the device is centered and fills the pic, with front and backside, as a jpg or jpeg file:</li>
   </ul>
   
   <p>Send the formular after filling it out. Please inform yourself about each topic. Check GSMarena for inspiration.</p>
