--- a/phoyotrowophoneq1.html
+++ b/phoyotrowophoneq1.html
@@ -228,7 +228,7 @@ color: grey;
 </ul>
 <li>Features: Under-display + optical Fingerprint</li>
 <li>Colors: Deep-Black</li>
- <li>Body: Plastic, 193.5g, 8mm</li>
+ <li>Body: Plastic, 193.5g, 8mm, IP53 rating</li>
 <li>Antutu-Score: 498.543 (v10)</li>
 <li>ForgePoints: 83</li>
  <li>Prices:</li>
