--- a/participate.html
+++ b/participate.html
@@ -107,7 +107,7 @@
     <li>Software (Android? Custom OS? Name? Generation? Software support? Security support?</li>
     <li>Other features? (Under display fingerprint/optical fingerprint/Face ID/Iris scanner/etc.?)</li>
     <li>Color and material variants of the device?</li>
-    <li>Body (Materials (example: leather backside, plastic frame), weight (grams), thickness (milimeters))</li>
+    <li>Body (Materials (example: leather backside, plastic frame), weight (grams), thickness (milimeters), IP rating)</li>
     <li>Geekbench Single- and Multi-Core score?</li>
     <li>Antutu-Score? Which antutu version? (v8/v10 is the latest)</li>
     <li>Amount of ForgePoints</li>
@@ -121,7 +121,7 @@
   <h1>What do I NOT do?</h1>
   </div>
     
-  <p>Don't submit unrealistic specs. Do research. Answer questions if there are any. Don't spam submits. 2 submits a day is okay. Anything above will be ignored. Accept criticism and suggestions. Not following these rules will erase your phones out of the project.</p>
+  <p>Don't submit unrealistic specs. DO RESEARCH about unclear topics. Answer questions if there are any. Don't spam submits. 2 submits a day is okay. Anything above will be ignored. Accept criticism and suggestions. Not following these rules will erase your phones out of the project.</p>
 
   </div>
   
