--- a/spinachemobile3.html
+++ b/spinachemobile3.html
@@ -199,7 +199,7 @@ color: grey;
 <ul>
 <li>Wide: 108 MP, f/1.7, 26mm, 1/1.2", PDAF, OIS</li>
 <li>Ultrawide: 48 MP, f/2.2, 13mm, 1/1.9", PDAF</li>
-<li>Periscope Telephoto: 48 MP, f/4.1, 130mm, 1/2", PDAF, OIS, 5x Optical Zoom</li>
+<li>Periscope Telephoto: 48 MP, f/4.1, 130mm, 1/2", PDAF, OIS, 5x Optical Zoom, 70x Digital Zoom</li>
 <li>Features: Dual Real-Tone Flash</li>
 <li>Video: 8k@24/30, 4k@24/30/60/120, 1080p@/24/30/60/120/240/480</li>
 </ul>
@@ -231,7 +231,7 @@ color: grey;
 </ul>
 <li>Features: Under-display Fingerprint</li>
 <li>Colors: Grip-Grey, Wooden-White</li>
-<li>Body: Eco-leather, with aluminum frame, 206g, 7.9mm</li>
+<li>Body: Eco-leather, with aluminum frame, 206g, 7.9mm, IP69 rating</li>
 <li>Geekbench Single-Core:</li>
 <ul>
 <li>Single-Core: 2839</li>
