--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       color: black;
       display: block;
       padding: 10px; 
-      background: #999; 
+      background: #D3D3D3; 
       border-radius: 5px; 
       margin-top: 5px;
     }
