--- a/novax10.html
+++ b/novax10.html
@@ -141,7 +141,7 @@ color: grey;
   </div>
   
 <div class="card">
-<img src="placeholder" alt="Picture of the device">
+<img src="img/Untitled367_20250310184844.jpeg" alt="Picture of the device">
 <div class="card-content">
 <p class="card-title">Velcon Nova X10</p>
 <ul class="card-list">
