--- a/index.html
+++ b/index.html
@@ -127,6 +127,8 @@
     { name: "Spinache Mobile 3", image: "img/Titelloses 215_20250224211030.jpeg", page: "spinachemobile3.html" },
     { name: "Spinache Mobile 2 Ultra", image: "img/Titelloses 167_20250204210436.jpeg", page: "spinachemobile2ultra.html" },
     { name: "Phoyo Trowophone Q1", image: "img/Untitled4_20250310193534.jpeg", page: "phoyotrowophoneq1.html" },
+    { name: "Velcon Nova X10", image: "img/Untitled367_20250310184844.jpeg", page: "novax10.html" },
+    { name: "Coming Soon", image: "placeholder", page: "placeholder" },
   ];
 
   function toggleMenu() {
