--- a/spinachemobile2ultra.html
+++ b/spinachemobile2ultra.html
@@ -200,7 +200,7 @@ color: grey;
 <li>Wide: 200 MP, f/1.7, 26mm, 1/0.97", PDAF, OIS</li>
 <li>Ultrawide: 50 MP, f/2.2, 13mm, 1/1.7", PDAF</li>
 <li>Periscope Telephoto: 50 MP, f/1.8, 211mm, 1/1.4", PDAF, OIS, 3-8.1x Optical Zoom, 120x Digital Zoom</li>
-<li>Features: Dual Real-Tone Flash</li>
+<li>Features: Laser-AF Sensor, Light Sensor, Dual Real-Tone Flash</li>
 <li>Video: 8k@24/30, 4k@24/30/60/120, 1080p@/24/30/60/120/240/480</li>
 </ul>
 <li>Selfie-Camera:</li>
