--- a/spinachemobile2ultra.html
+++ b/spinachemobile2ultra.html
@@ -232,7 +232,7 @@ color: grey;
 <li>Features: Face ID, Under-display Fingerprint</li>
 <li>Colors: Leather-Grey</li>
  <li>Body: Leather, with aluminum frame, 224, 8.6mm, IP68 rating</li>
-<li>Geekbench Single-Core:</li>
+<li>Geekbench 6:</li>
 <ul>
 <li>Single-Core: 2709</li>
 <li>Multi-Core: 8987</li>
