--- a/template.html
+++ b/template.html
@@ -232,7 +232,7 @@ color: grey;
 <li>Features: Under-display Fingerprint</li>
 <li>Colors: Grip-Grey, Wooden-White</li>
  <li>Body: Eco-leather, with aluminum frame, 206g, 7.9mm</li>
-<li>Geekbench Single-Core:</li>
+<li>Geekbench 6:</li>
 <ul>
 <li>Single-Core: 2839</li>
 <li>Multi-Core: 8219</li>
