--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     { name: "Spinache Mobile 2 Ultra", image: "img/Titelloses 167_20250204210436.jpeg", page: "spinachemobile2ultra.html" },
     { name: "Phoyo Trowophone Q1", image: "img/Untitled4_20250310193534.jpeg", page: "phoyotrowophoneq1.html" },
     { name: "Velcon Nova X10", image: "img/Untitled367_20250310184844.jpeg", page: "novax10.html" },
-    { name: "Coming Soon", image: "placeholder", page: "placeholder" },
+    { name: "Spinache Mobile 2 Pro", image: "spinache?mobile?2?pro", page: "spinachemobile2pro.html" },
   ];
 
   function toggleMenu() {
