--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
     { name: "Phoyo Trowophone Q1", image: "img/Untitled4_20250310193534.jpeg", page: "phoyotrowophoneq1.html" },
     { name: "Velcon Nova X10", image: "img/Untitled367_20250310184844.jpeg", page: "novax10.html" },
     { name: "Spinache Mobile 2 Pro", image: "img/spinache?mobile?2?pro.jpeg", page: "spinachemobile2pro.html" },
+    { name: "Velcon Neo 2", image: "img/Untitled334_20250310194037.jpeg", page: "velconneo2.html" },
   ];
 
   function toggleMenu() {
