--- a/spinachemobile2pro.html
+++ b/spinachemobile2pro.html
@@ -141,7 +141,7 @@ color: grey;
   </div>
   
 <div class="card">
-<img src="img/spinache?mobile?2?pro.jpeg" alt="Picture of the device">
+<img src="img/Titelloses 165_20250124210742.jpeg" alt="Picture of the device">
 <div class="card-content">
 <p class="card-title">Spinache Mobile 2 Pro</p>
 <ul class="card-list">
