--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
     { name: "Velcon Nova X10", image: "img/Untitled367_20250310184844.jpeg", page: "novax10.html" },
     { name: "Spinache Mobile 2 Pro", image: "img/Titelloses 165_20250124210742.jpeg", page: "spinachemobile2pro.html" },
     { name: "Velcon Neo 2", image: "img/Untitled334_20250310194037.jpeg", page: "velconneo2.html" },
+    { name: "Spinache Mobile 2", image: "img/Titelloses 150_20250117121500.png", page: "spinachemobile2" },
   ];
 
   function toggleMenu() {
