--- a/index.html
+++ b/index.html
@@ -130,7 +130,9 @@
     { name: "Velcon Nova X10", image: "img/Untitled367_20250310184844.jpeg", page: "novax10.html" },
     { name: "Spinache Mobile 2 Pro", image: "img/Titelloses 165_20250124210742.jpeg", page: "spinachemobile2pro.html" },
     { name: "Velcon Neo 2", image: "img/Untitled334_20250310194037.jpeg", page: "velconneo2.html" },
-    { name: "Spinache Mobile 2", image: "img/Titelloses 150_20250117121500.png", page: "spinachemobile2" },
+    { name: "Spinache Mobile 2", image: "img/Titelloses 150_20250117121500.png", page: "spinachemobile2.html" },
+    { name: "Spinache Mobile 1 Dream", image: "img/Titelloses 112_20241227191738.jpeg", page: "spinachemobile1dream.html" },
+    { name: "Spinache Tab 1 Pro", image: "img/Titelloses 109_20241227175141.jpeg", page: "spinachetab1pro.html" },
   ];
 
   function toggleMenu() {
