--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
     .device-card h3 { 
       font-size: 16px; 
       margin: 10px 0;
+      position: absolute;
     }
     
     .device-card a { 
@@ -98,6 +99,7 @@
       background: #D3D3D3; 
       border-radius: 5px; 
       margin-top: 5px;
+      position: absolute;
     }
 
     .logo {
