--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     .device-card h3 { 
       font-size: 16px; 
       margin: 10px 0;
-      position: absolute;
+      bottom: 0;
     }
     
     .device-card a { 
@@ -99,7 +99,7 @@
       background: #D3D3D3; 
       border-radius: 5px; 
       margin-top: 5px;
-      position: absolute;
+      bottom: 0;
     }
 
     .logo {
