--- a/participate.html
+++ b/participate.html
@@ -112,7 +112,7 @@
     <li>Antutu-Score? Which antutu version? (v8/v10 is the latest)</li>
     <li>Amount of ForgePoints</li>
     <li>Prices for each storage, color or material variant</li>
-    <li>A picture of the device where the device is centered and fills the pic, with front and backside, as a jpg or jpeg file:</li>
+    <li>A picture of the device where the device is centered and fills the pic, with front and backside (on one picture), as a jpg or jpeg file:</li>
   </ul>
   
   <p>Send the formular after filling it out. Please inform yourself about each topic. Check GSMarena for inspiration.</p>
